force-app/main/default/objects/Job__c/fields/Is_Remote__c.field-meta.xml
<CustomField>
    <fullName>Is_Remote__c</fullName>
    <label>Remote?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>