force-app/main/default/objects/Job__c/fields/Offered_Salary__c.field-meta.xml
<CustomField>
    <fullName>Offered_Salary__c</fullName>
    <label>Offered Salary</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>