force-app/main/default/objects/Job__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce Architect</fullName>
            </value>
            <value>
                <fullName>Salesforce Business Analyst</fullName>
            </value>
            <value>
                <fullName>Salesforce Consultant</fullName>
            </value>
            <value>
                <fullName>Salesforce Cybersecurity Analyst</fullName>
            </value>
            <value>
                <fullName>Salesforce Designer</fullName>
            </value>
            <value>
                <fullName>Salesforce Administrator</fullName>
            </value>
            <value>
                <fullName>Salesforce Developer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>