force-app/main/default/objects/Job__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <description>Skills that the job possesses, selected from a predefinedlist.</description>
    <label>Skills</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>LWC</fullName>
            </value>
            <value>
                <fullName>Visualforce</fullName>
            </value>
            <value>
                <fullName>SOQL</fullName>
            </value>
            <value>
                <fullName>Aura Components</fullName>
            </value>
            <value>
                <fullName>Flows</fullName>
            </value>
            <value>
                <fullName>Permission Sets</fullName>
            </value>
            <value>
                <fullName>Reports and Dashboards</fullName>
            </value>
            <value>
                <fullName>Process Builder</fullName>
            </value>
            <value>
                <fullName>Data Loader</fullName>
            </value>
            <value>
                <fullName>User Stories</fullName>
            </value>
            <value>
                <fullName>Requirements Gathering</fullName>
            </value>
            <value>
                <fullName>Agile Methodology</fullName>
            </value>
            <value>
                <fullName>Data Mapping</fullName>
            </value>
            <value>
                <fullName>Use Cases</fullName>
            </value>
            <value>
                <fullName>Wireframing</fullName>
            </value>
            <value>
                <fullName>Figma</fullName>
            </value>
            <value>
                <fullName>Design Tokens</fullName>
            </value>
            <value>
                <fullName>UX Writing</fullName>
            </value>
            <value>
                <fullName>Design System</fullName>
            </value>
            <value>
                <fullName>Security Review</fullName>
            </value>
            <value>
                <fullName>Integration Patterns</fullName>
            </value>
            <value>
                <fullName>Multi-Org Strategy</fullName>
            </value>
            <value>
                <fullName>System Scalability</fullName>
            </value>
            <value>
                <fullName>Data Modeling</fullName>
            </value>
            <value>
                <fullName>Shield Encryption</fullName>
            </value>
            <value>
                <fullName>Field Level Security</fullName>
            </value>
            <value>
                <fullName>Event Monitoring</fullName>
            </value>
            <value>
                <fullName>Audit Trail</fullName>
            </value>
            <value>
                <fullName>User Authentication</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>