force-app/main/default/objects/Job__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Business Analyst</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Cybersecurity Analyst</fullName>
            </value>
            <value>
                <fullName>Designer</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>